src/components/AppIcon/AppIcon.module.less
@import '~@enact/sandstone/styles/skin.less';

.icon {
    width: 6.25rem !important;
    height: 6.25rem !important;
    margin: 0;
    border-radius: 1rem;
}

.icon_small {
    width: 4.16rem !important;
    height: 4.16rem !important;
    // background-color: gray;
    margin: 0 0.7rem !important;
    border-radius: 1rem;
}

.icon:active,
.icon_cnt_s:active {
    transform: scale(1.2);
}
p.title{
    font-size: 0.83rem;
    font-weight: 600;
    width: 9.2rem;
    text-align: center;
    margin-top: 0.5rem;
    line-height: 1.1rem;
}
.icon_cnt {
    position: relative;
    margin: 0 .45rem;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.icon_cnt_s {
    position: relative;
}
div.icon_cnt_s:first-child{
    margin-left: auto ;
}

.edit {
    position: absolute;
    display: block;
    background-color: #A6A6A6;
    text-align: center;
    width: 1.33rem;
    height: 1.33rem;
    border-radius: 50%;
    top: -0.50833rem;
    right: 1rem;
    line-height: 1.33rem;
    font-size: 1.5rem;
    line-height: 1.2rem;
}
.edit_s{
    right: 0rem;
}

.running {
    position: absolute;
    top: auto;
    bottom: -0.6rem;
    left: 2rem;
    right: 0;
    width: 0.33rem;
    height: 0.33rem;
    background: #D9D9D9;
    border-radius: 50%;
}

.popupCtn {
    width: 14.58rem;
}

.menuContainer {
    padding: 0 1.5rem;
    max-width: 13.7rem;
}

.switchItemcontainer {
    display: flex;
    background: #7D848C;
    margin: 1rem 0;
    align-items: center;
    width: 12.08rem;
    height: 2.91rem;
    flex-direction: row;
    margin: 1rem 0;
}

.label {
    font-size: 1rem !important;
}

.radio {
    margin-left: 1rem !important;
    margin-right: .7rem !important;
    z-index: 1;
}

.running {
    position: absolute;
    top: auto;
    bottom: -0.8rem;
    left: 45%;
    right: 0;
    width: 0.5rem;
    height: 0.5rem;
    background: #D9D9D9;
    border-radius: 50%;
    text-align: center;
    display: flex;
    justify-content: center;
}

.closeIconCtn {
    display: flex;
    border-bottom: .1rem solid #7D848C !important;
    align-items: flex-end;
    position: relative;
    width: 10rem;
}

.closeIconCtnIcon {
    margin-left: auto;
    position: absolute;
    left: auto;
    right: -4rem;
    top: -0.5rem;
}

.popuptitle {
    width: 10rem;
}

.test {
    margin-left: auto;
}

.switchItemcontainer_delete{
    display: flex;
    background: #7D848C;
    margin: 1rem 0;
    align-items: center;
    width: 14rem;
    height: 2.91rem;
    flex-direction: row;
    margin: 1rem 0;
}

